# TerritoriaUniversalis

./: .clang-format  CMakeLists.txt  README.md
src/: Action.cpp  Action.h  Country.cpp  Country.h  Map.cpp  Map.h  main.cpp
